Fix dark mode bug

--- a/public/dice.css
+++ b/public/dice.css
@@ -175,3 +175,10 @@
 .selected .die-item {
     background-color: hsl(220, 97%, 80%);
 }
+
+@media (prefers-color-scheme: dark) {
+
+  .die-item {
+    background-color: #eee;
+  }
+}
